--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,8 @@ project(BrainrotList VERSION 1.0.0)
 
 add_library(${PROJECT_NAME} SHARED
     src/main.cpp
+    src/Demon/LevelCell.cpp
+    src/Demon/LevelInfoLayer.cpp
     # Add any extra C++ source files here
 )
 
