i'm throwing a fit at github

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -23,7 +23,7 @@ endif()
 
 add_subdirectory($ENV{GEODE_SDK} ${CMAKE_CURRENT_BINARY_DIR}/geode)
 # Add WebView library using FetchContent
-if (NOT ENV{FUCKYOUWEBVIEW})
+if (NOT ENV{FUCKYOUWEBVIEW} AND NOT webview::core)
 set(ENV{FUCKYOUWEBVIEW} true)
 include(FetchContent)
     FetchContent_Declare(
@@ -32,13 +32,10 @@ include(FetchContent)
         GIT_TAG 0.12.0
     )
     FetchContent_MakeAvailable(webview)
+    target_link_libraries(${PROJECT_NAME} webview::core)
 else()
     message(STATUS "------> I am already here <--------")
 endif()
-target_link_libraries(${PROJECT_NAME} webview::core)
-if (NOT TARGET webview::core)
-message(STATUS "brok")
-endif()
- message(STATUS "added webview")
+message(STATUS "added webview")
 # Setup Geode mod
 setup_geode_mod(${PROJECT_NAME})
