--- a/.github/workflows/multi-platform.yml
+++ b/.github/workflows/multi-platform.yml
@@ -32,6 +32,9 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Clean Build Directory AKA FUCK IT
+        run: rm -rf build/
+
       - name: Build the mod
         uses: geode-sdk/build-geode-mod@main
         with:
@@ -39,6 +42,9 @@ jobs:
           bindings-ref: main
           combine: true
           target: ${{ matrix.config.target }}
+
+      - name: Debug Build Environment
+        run: cat build/CMakeCache.txt
 
   package:
     name: Package builds
