--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,18 +14,6 @@ add_library(${PROJECT_NAME} SHARED
     # Add any extra C++ source files here
 )
 
-if (NOT TARGET_LINKED_TO_${PROJECT_NAME}_webview)
- set(TARGET_LINKED_TO_${PROJECT_NAME}_webview TRUE)
- include(FetchContent)
- FetchContent_Declare(
-     webview
-     GIT_REPOSITORY https://github.com/webview/webview.git
-     GIT_TAG 0.12.0
- )
-FetchContent_MakeAvailable(webview)
-target_include_directories(${PROJECT_NAME} PRIVATE webview)
-endif()
-
 # Add Geode SDK
 if (NOT DEFINED ENV{GEODE_SDK})
     message(FATAL_ERROR "Unable to find Geode SDK! Please define GEODE_SDK environment variable to point to Geode")
@@ -35,7 +23,23 @@ endif()
 
 add_subdirectory($ENV{GEODE_SDK} ${CMAKE_CURRENT_BINARY_DIR}/geode)
 
+# Add WebView library using CPM
+if (EXISTS "${CMAKE_SOURCE_DIR}/webview")
+    CPMAddPackage(
+        NAME webview
+        SOURCE_DIR "${CMAKE_SOURCE_DIR}/webview"
+    )
+else()
+    CPMAddPackage(
+        NAME webview
+        GIT_REPOSITORY https://github.com/webview/webview
+        GIT_TAG 0.12.0
+    )
+    message(STATUS "Added from github")
+endif()
 
+# Link WebView library
+target_link_libraries(${PROJECT_NAME} webview::core)
 
 # Setup Geode mod
 setup_geode_mod(${PROJECT_NAME})
