--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,9 +3,9 @@ set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_OSX_ARCHITECTURES "arm64;x86_64")
 set(CMAKE_CXX_VISIBILITY_PRESET hidden)
-
 project(BrainrotList VERSION 1.0.0)
-
+project(BrainrotList LANGUAGES CXX)
+set(WEBVIEW_USE_BUILTIN_MSWEBVIEW2,)
 # Add source files for the project
 add_library(${PROJECT_NAME} SHARED
     src/main.cpp
