--- a/.github/workflows/relwithdebinfo.yml
+++ b/.github/workflows/relwithdebinfo.yml
@@ -15,6 +15,9 @@ jobs:
         - name: Windows
           os: windows-latest
           
+        - name: macOS
+          os: macos-latest
+
         - name: Android32
           os: ubuntu-latest
           target: Android32
@@ -22,6 +25,10 @@ jobs:
         - name: Android64
           os: ubuntu-latest
           target: Android64
+
+        - name: iOS
+          os: macos-latest
+          target: iOS
 
     name: ${{ matrix.config.name }}
     runs-on: ${{ matrix.config.os }}
