--- a/.github/workflows/relwithdebinfo.yml
+++ b/.github/workflows/relwithdebinfo.yml
@@ -1,10 +1,11 @@
 name: RelWithDebInfo
 
-on:
-  workflow_dispatch:
-  push:
-    branches:
-      - "**"
+# you can build but not auto
+#on:
+#  workflow_dispatch:
+#  push:
+#    branches:
+#      - "**"
 
 jobs:
   build:
@@ -26,9 +27,9 @@ jobs:
           os: ubuntu-latest
           target: Android64
 
-        - name: iOS
-          os: macos-latest
-          target: iOS
+        #- name: iOS
+        #  os: macos-latest
+        #  target: iOS
 
     name: ${{ matrix.config.name }}
     runs-on: ${{ matrix.config.os }}
