--- a/.github/workflows/multi-platform.yml
+++ b/.github/workflows/multi-platform.yml
@@ -15,8 +15,8 @@ jobs:
         - name: Windows
           os: windows-latest
           
-        #- name: macOS
-        #  os: macos-latest
+        - name: macOS
+          os: macos-latest
 
         - name: Android32
           os: ubuntu-latest
@@ -26,9 +26,9 @@ jobs:
           os: ubuntu-latest
           target: Android64
 
-        #- name: iOS
-        #  os: macos-latest
-        #  target: iOS
+        - name: iOS
+          os: macos-latest
+          target: iOS
 
     name: ${{ matrix.config.name }}
     runs-on: ${{ matrix.config.os }}
@@ -39,7 +39,8 @@ jobs:
       - name: Build the mod
         uses: geode-sdk/build-geode-mod@main
         with:
-          
+          bindings: RayDeeUx/bindings
+          bindings-ref: "holy-fuck-viper-stop-working-on-this-dogshit-mod"
           combine: true
           target: ${{ matrix.config.target }}
 
